# audio_wm

./: .gitignore  Untitled.ipynb  Untitled2.ipynb  Untitled2.py  alembic.ini  classes_tree.csv  classifier.ipynb  docker-compose.yml  extract.py  inject.py  last_params.sql  main.py  ontology.json  optimizer.ipynb  optimizer.py  optimizers_research.ipynb  requirements.txt  spleeter.ipynb  test.ipynb  tf_serving.sh  venv.sh
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
alembic/: alembic.ini  alembic_ai.ini
app/ai_api/: main.py
app/ai_api/core/: __init__.py  _settings.py  constants.py  extensions.py
app/ai_api/database/: core.py
app/ai_api/exceptions/: __init__.py  access.py  bad_request.py  not_found.py  unauthorized.py  validation.py
app/frontend/: index.html  labelList.js  main.js
app/frontend/css/: style.css
app/frontend/scripts/: labelList.js  main.js  reset_experiment.js
app/optimizer_api/: main.py
app/optimizer_api/core/injector/C_code/: CMakeLists.txt
app/optimizer_api/core/injector/C_code/code/: Audio_frame.cpp  Audio_frame.h  Headers.h  Parametrs_dwz.cpp  Parametrs_dwz.h  common.cpp  common.h  custom_exception.cpp  custom_exception.h  data_wrapper.cpp  data_wrapper.h  dct_function.cpp  dct_function.h  main.cpp  quality_param.cpp  quality_param.h  scripts.cpp  scripts.h  test_dct.cpp
app/scripts/: last_params.sql  split_urban_sound.py
docker/ai/: Dockerfile  requirements.txt
docker/frontend/: Dockerfile
docker/optimizer/: Dockerfile  requirements.txt
docs/: db_optimizer.drawio
notebooks/: Untitled1.ipynb  optimizer.ipynb
(+84 files in other folders)
